force-app/main/default/objects/CommerceFlag__c/CommerceFlag__c.object-meta.xml
<CustomObject>
    <label>Flag</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>