force-app/main/default/objects/CommerceFlag__c/fields/Animate__c.field-meta.xml
<CustomField>
    <fullName>Animate__c</fullName>
    <label>Animate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pulse</fullName>
            </value>
            <value>
                <fullName>Stretch</fullName>
            </value>
            <value>
                <fullName>Swing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>