force-app/main/default/objects/CommerceFlag__c/fields/Rotate__c.field-meta.xml
<CustomField>
    <fullName>Rotate__c</fullName>
    <label>Rotate</label>
    <length>25</length>
    <type>Text</type>
</CustomField>