force-app/main/default/objects/CommerceFlag__c/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <label>Translation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>