force-app/main/default/objects/CommerceFlag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Color__c</columns>
    <columns>Background_Color__c</columns>
    <columns>Rotate__c</columns>
    <columns>Animate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>